--- a/.env.local.sample
+++ b/.env.local.sample
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://development:development@localhost:5432/lesson_scheduler?schema=public"
+DATABASE_URL=""
