--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "reset": "npx prisma migrate reset"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -24,5 +25,8 @@
   },
   "devDependencies": {
     "prisma": "^4.9.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
