--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^5.11.6",
     "@next/font": "13.1.5",
     "@prisma/client": "^4.9.0",
+    "axios": "^1.3.0",
     "date-fns": "^2.29.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "next": "13.1.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "prisma": "^4.9.0"
