--- a/package.json
+++ b/package.json
@@ -1,34 +1,50 @@
 {
   "name": "lesson-scheduler",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "reset": "npx prisma migrate reset"
-  },
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.6",
-    "@next/font": "13.1.5",
-    "@prisma/client": "^4.9.0",
-    "axios": "^1.3.0",
+    "@mui/material": "^5.11.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.2",
     "date-fns": "^2.29.3",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
-    "next": "13.1.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^2.0.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "swr": "^2.0.3",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "prisma": "^4.9.0"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
   }
 }
