--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "cookie-session": "^2.0.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "./node_modules/.bin/nodemon server/index.js",
+    "dev": "run-p start server"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
     "prisma": "^4.9.0"
   }
 }
