--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
+    "@prisma/client": "^4.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -24,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "./node_modules/.bin/nodemon server/index.js",
-    "dev": "run-p start server"
+    "dev": "run-p start server",
+    "reset": "npx prisma migrate reset"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +55,9 @@
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "prisma": "^4.9.0"
-  }
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
+  "proxy": "http://localhost:8080"
 }
