--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^6.4.3",
     "react-scripts": "5.0.1",
     "swr": "^2.0.3",
     "web-vitals": "^2.1.4"
